--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,11 +5,37 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/opq-ao.css")">
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+        <div class="navbar">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="brand" href="#">Open Power Quality</a>
+                    <div class="navbar-content">
+                        <ul class="nav">
+                            <li class="active">
+                                <a href="@routes.Application.index()">Home</a>
+                            </li>
+                            <li>
+                                <a href="@routes.Administration.user()">Administration</a>
+                            </li>
+                            <li>
+                                <a href="@routes.PowerQualityMonitoring.index()">Power Quality Monitoring</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
         @content
+        </div>
     </body>
 </html>
