--- a/app/views/adminalert.scala.html
+++ b/app/views/adminalert.scala.html
@@ -1,4 +1,4 @@
-@admin("Alert Management",
+@admin("Alert Administration",
     "This page allows you to manage and create power quality events.") {
     <div class="span6">
         <form class="form-vertical well well-small">
