--- a/app/views/admindevice.scala.html
+++ b/app/views/admindevice.scala.html
@@ -1,4 +1,4 @@
-@admin("Device Management",
+@admin("Device Administration",
     "This page allows you to add and configure devices.") {
     <div class="span6">
         <form class="form-vertical well well-small">
