--- a/app/views/adminuser.scala.html
+++ b/app/views/adminuser.scala.html
@@ -1,4 +1,4 @@
-@admin("User Management",
+@admin("User Administration",
     "This page allows you to configure basic information such as e-mail address, password, and your address.") {
     <div class="span6">
         <form class="well well-small">
