--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -1,48 +1,25 @@
 @(title: String, description: String)(content: Html)
 
+@createMenuItem(text: String, selectOn: String, link: play.api.mvc.Call) = {
+    @if(title.toLowerCase().contains(selectOn)) {
+        <li class="active">
+    } else {
+        <li>
+    }
+    <a href="@link">@text</a>
+    </li>
+}
+
 @main(title) {
     <div class="row-fluid">
 
         <!-- Side menu -->
         <div class="span4">
             <ul class="nav  nav-pills nav-stacked">
-
-                <!-- User Administration Tab -->
-                @if(title.toLowerCase().contains("user")) {
-                    <li class="active">
-                } else {
-                    <li>
-                }
-                    <a href="@routes.Administration.user()">User Administration</a>
-                </li>
-
-
-                <!-- Device Administration Tab -->
-                @if(title.toLowerCase().contains("device")) {
-                    <li class="active">
-                } else {
-                    <li>
-                }
-                    <a href="@routes.Administration.device()">Device Administration</a>
-                </li>
-
-                <!-- Alert Administration Tab -->
-                @if(title.toLowerCase().contains("alert")) {
-                    <li class="active">
-                } else {
-                    <li>
-                }
-                    <a href="@routes.Administration.alert()">Alert Administration</a>
-                </li>
-
-                <!-- CDSI Administration Tab -->
-                @if(title.toLowerCase().contains("cdsi")) {
-                    <li class="active">
-                } else {
-                    <li>
-                }
-                    <a href="@routes.Administration.cdsi()">CDSI Administration</a>
-                </li>
+                @createMenuItem("User Administration", "user", routes.Administration.user())
+                @createMenuItem("Device Administration", "device", routes.Administration.device())
+                @createMenuItem("Alert Administration", "alert", routes.Administration.alert())
+                @createMenuItem("CDSI Administration", "cdsi", routes.Administration.cdsi())
             </ul>
             <div class="well">
                 <p>
