Closed errant javscript statement.

--- a/app/views/publicpowerqualitymonitoring.scala.html
+++ b/app/views/publicpowerqualitymonitoring.scala.html
@@ -74,7 +74,7 @@
             // Base map centered on Honolulu
             var map             = new OpenLayers.Map('public-map');
             var osm             = new OpenLayers.Layer.OSM();
-            var projection      = new OpenLayers.Projection("EPSG:4326")
+            var projection      = new OpenLayers.Projection("EPSG:4326");
             var center          = new OpenLayers.LonLat(-157.8583,21.3069);
             var zoom            = 9;
             map.addLayer(osm);
