Removed code trying to creation optional links to stylesheets and javascript. Instead the OSM js is called for every page. This is a decent work around, but should be handled properly somehow.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,16 +1,16 @@
-@(title: String, extraStylesheets: String = "", extraJavascripts: String = "")(content: Html)
+@(title: String)(content: Html)
 
-@createMenuItem(text: String, selectOn: String, link: play.api.mvc.Call) = {
+    @createMenuItem(text: String, selectOn: String, link: play.api.mvc.Call) = {
     @if(title.toLowerCase().contains(selectOn)) {
         <li class="active">
-    } else {
+        } else {
         <li>
-    }
-    <a href="@link">@text</a>
+        }
+        <a href="@link">@text</a>
     </li>
-}
+    }
 
-<!DOCTYPE html>
+    <!DOCTYPE html>
 
 <html>
     <head>
@@ -20,17 +20,10 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/opq-ao.css")">
-
-        @for(css <- extraStylesheets.split(",")) {
-            <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/")">
-        }
-
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/OpenLayers.js")" type="text/javascript"></script>
 
-        @for(js <- extraJavascripts.split(",")) {
-            <script src="@routes.Assets.at("javascripts/@js")" type="text/javascript"></script>
-        }
 
     </head>
     <body>
