Added link to download visible alerts.

--- a/app/views/privatepowerqualitymonitoring.scala.html
+++ b/app/views/privatepowerqualitymonitoring.scala.html
@@ -71,6 +71,8 @@
                         </tr>
                     </tbody>
                 </table>
+                <hr />
+                <a href="@routes.PowerQualityMonitoring.getAlerts()">Download Visible Alerts (.csv)</a>
             </form>
         </div>
         <div class="span9">
