--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,9 +20,11 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/opq-ao.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/leaflet.css")">
+
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/OpenLayers.js")" type="text/javascript"></script>
+
 
 
     </head>
