--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String, menu: Html)(content: Html)
 
     @createMenuItem(text: String, selectOn: String, link: play.api.mvc.Call) = {
     @if(title.toLowerCase().contains(selectOn)) {
@@ -10,39 +10,23 @@
     </li>
     }
 
-    <!DOCTYPE html>
-
-<html>
+<!DOCTYPE HTML>
+<html class="fuelux">
     <head>
         <title>@title</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("fuelux/css/fuelux.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("fuelux/css/fuelux-responsive.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/opq-ao.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/leaflet.css")">
 
-        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-
+        <script src="@routes.Assets.at("fuelux/loader.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/opq-ao.js")" type="text/javascript"></script>
 
 
     </head>
     <body>
-        <div class="navbar">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="brand" href="#">Open Power Quality</a>
-                    <div class="navbar-content">
-                        <ul class="nav">
-                            @createMenuItem("Home", "home", routes.Application.index())
-                            @createMenuItem("Administration", "administration", routes.Administration.user())
-                            @createMenuItem("Power Quality Monitoring", "power quality monitoring", routes.PowerQualityMonitoring.publicMonitor())
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+        @menu
         <div class="container-fluid">
         @content
         </div>
