--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,46 +1,41 @@
-
-@main("Home") {
-    <div class="hero-unit hidden-phone">
-        <h1>Welcome to Open Power Quality</h1>
-
-        <p>An easy way to analyze and view historic power quality information.</p>
-
-        <p>
-            <a class="btn btn-large btn-inverse" href="@routes.SignUp.signUp()"><span class="btn-label">Sign Up Today!</span></a>
-            <a class="btn btn-primary btn-large" href="#"><span class="btn-label">Login</span></a>
-        </p>
-    </div>
-    <a class="btn btn-large btn-primary btn-block visible-phone" href="#"><span class="btn-label">Sign Up Today!</span></a>
-
-    <div class="row main-features">
-        <div class="span4">
-            <div class="well">
-                <h3>Monitor Power Quality</h3>
-
-                <p>Monitor voltage, frequency, and more from your OPQ device.</p>
-                <a class="btn btn-primary"
-                href="#"><span class="btn-label">Find Out More</span></a>
-            </div>
+@main("Getting Started with OPQ", menu("Getting Started with OPQ", true)) {
+    <div class="container">
+        <div class="hero-unit hidden-phone">
+            <h1>Welcome to Open Power Quality</h1>
+            <p>To get started, select one of the two options below.</p>
+            <p>
+                <a class="btn btn-large btn-inverse" href="@routes.Wizard.index()"><span class="btn-label">Set Up Device</span></a>
+                <a class="btn btn-large btn-primary" href="#"><span class="btn-label">Login</span></a>
+            </p>
         </div>
-        <div class="span4">
-            <div class="well">
-                <h3>Powerful Timeline Controls</h3>
-                <p>View power quality information over any range of time.</p>
-                <a class="btn btn-info"
-                href="#">
-                    <span class="btn-label">Find Out More</span>
-                </a>
+        <div class="row main-features">
+            <div class="span6">
+                <div class="well">
+                    <h3>What is Open Power Quality?</h3>
+                    <p>
+                        Open Power Quality (OPQ) is a project developed at the University of Hawaii at Manoa which
+                        allows for distributed power quality analysis.
+                    </p>
+                    <p>
+                        <a class="btn btn-primary" href="#"><span class="btn-label">Find Out More</span></a>
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="span4">
-            <div class="well">
-                <h3>Advanced Analysis</h3>
-
-                <p>View plots and figures of power quality data over any time range.</p>
-                <a class="btn btn-success" href="#">
-                    <span class="btn-label">Find Out More</span>
-                </a>
+            <div class="span6">
+                <div class="well">
+                    <h3>Community Data Sharing Initiative</h3>
+                    <p>
+                        OPQ device users may choose to share power quality information with the public. That
+                        information is publicly available in one of two formats. A map view for visual analysis,
+                        and the ability to download a comma separated value file of power quality information.
+                    </p>
+                    <p>
+                        <a class="btn btn-primary" href="@routes.PowerQualityMonitoring.publicMonitor()"><span class="btn-label">
+                            Public Power Quality Monitoring</span></a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
 }
+
