Updated to work with new menu template.

--- a/app/views/privatepowerqualitymonitoring.scala.html
+++ b/app/views/privatepowerqualitymonitoring.scala.html
@@ -1,4 +1,4 @@
-@main("Power Quality Monitoring") {
+@main("Private Power Quality Monitoring", menu("Private Power Quality Monitoring", false)) {
     <div class="row">
         <div class="span3">
             <form class="well well-small">
@@ -150,7 +150,7 @@
                 <br>
                 <br>
                 You may also choose "Custom Range" in order to enter your own time range.
-                When entering a custom time range, be sure to use mm/dd/yyyy for the date
+                When entering a custom time range, be sure to use mm/dd/yyyy for the timestamp
                 (i.e. 07/28/2013) and be sure to use a 24 hour clock format for the time
                 (i.e. 23:00 instead of 11 PM).
             </p>
