--- a/app/views/publicpowerqualitymonitoring.scala.html
+++ b/app/views/publicpowerqualitymonitoring.scala.html
@@ -1,6 +1,6 @@
-@(alerts: List[models.Alert], devices: List[models.OpqDevice])
+@(alerts: List[models.Alert], devices: List[models.OpqDevice], loggedOut: Boolean)
 
-@main("Power Quality Monitoring") {
+@main("Public Power Quality Monitoring", menu("Public Power Quality Monitoring", loggedOut)) {
     <div class="row">
         <div class="span3" id="map-controls">
             <form class="well well-small">
@@ -83,11 +83,14 @@
             </form>
         </div>
 
-        <!-- Start of Leaflet -->
+            <!-- Start of Leaflet -->
         <script src="@routes.Assets.at("javascripts/leaflet.js")" type="text/javascript"></script>
         <div id="public-map" class="span9"></div>
 
         <script type="text/javascript">
+            // Make sure the correct css file is included
+            addDynamicCss("@routes.Assets.at("stylesheets/leaflet.css")");
+
             // Setup basic map with OSM layer
             var map = L.map('public-map');
             var osmUrl='http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
@@ -100,63 +103,62 @@
 
             // Create the icons
             var deviceMarker = L.icon({
-                iconUrl: '@routes.Assets.at("images/opq-icon.png")'
+            iconUrl: '@routes.Assets.at("images/opq-icon.png")'
             });
             var frequencyMarker = L.icon({
-                iconUrl: '@routes.Assets.at("images/frequency-alert-icon.png")'
+            iconUrl: '@routes.Assets.at("images/frequency-alert-icon.png")'
             });
             var voltageMarker = L.icon({
-               iconUrl: '@routes.Assets.at("images/voltage-alert-icon.png")'
+            iconUrl: '@routes.Assets.at("images/voltage-alert-icon.png")'
             });
 
             // Create pop-up templates
             function makeTable(vals) {
-                var table = "<table id='popup-table'>";
+            var table = "<table id='popup-table'>";
 
-                for(i = 0; i < vals.length; i += 2) {
-                    table += '<tr><td><b>' + vals[i] + '</b></td><td>' + vals[i + 1] + '</td></tr>';
-                }
+            for(i = 0; i < vals.length; i += 2) {
+            table += '<tr><td><b>' + vals[i] + '</b></td><td>' + vals[i + 1] + '</td></tr>';
+            }
 
-                table += "</table>"
+            table += "</table>"
 
-                return table;
+            return table;
             }
 
             function deviceTemplate(deviceId, latitude, longitude) {
-                return makeTable(["Device ID", deviceId, "Latitude", latitude, "Longitude", longitude]);
+            return makeTable(["Device ID", deviceId, "Latitude", latitude, "Longitude", longitude]);
             }
 
-            function alertTemplate(alertType, date, duration, alertValue, description, latitude, longitude) {
-                return makeTable([
-                    "Alert Type", alertType,
-                    "Date", date,
-                    "Duration", duration,
-                    "Alert Value", alertValue,
-                    "Description", description,
-                    "Latitude", latitude,
-                    "Longitude", longitude
-                ]);
+            function alertTemplate(alertType, timestamp, duration, alertValue, latitude, longitude) {
+            return makeTable([
+            "Alert Type", alertType,
+            "Date", timestamp,
+            "Duration", duration,
+            "Alert Value", alertValue,
+            "Latitude", latitude,
+            "Longitude", longitude
+            ]);
             }
 
             // Display devices
             @for(device <- devices) {
                 L.marker([@device.getLatitude(), @device.getLongitude()], {icon: deviceMarker}).addTo(map)
-                    .bindPopup(deviceTemplate(@device.getDeviceId, @device.getLatitude, @device.getLongitude));
+                .bindPopup(deviceTemplate(@device.getDeviceId, @device.getLatitude, @device.getLongitude));
             }
 
             // Display alerts
-            @for(alert <- alerts) {
-                @if(alert.getAlertType().equals(Alert.AlertType.FREQUENCY)) {
-                    L.marker([@alert.latitude, @alert.longitude], {icon: frequencyMarker}).addTo(map)
-                        .bindPopup(alertTemplate('@alert.getAlertType', '@alert.getDate', @alert.getDuration + ' ms',
-                            @alert.getAlertValue + 'Hz', '@alert.getDescription', @alert.latitude, @alert.longitude));
-                }
-                @if(alert.getAlertType().equals(Alert.AlertType.VOLTAGE)) {
-                    L.marker([@alert.latitude, @alert.longitude], {icon: voltageMarker}).addTo(map)
-                    .bindPopup(alertTemplate('@alert.getAlertType', '@alert.getDate', @alert.getDuration + ' ms',
-                        @alert.getAlertValue + ' V', '@alert.getDescription', @alert.latitude, @alert.longitude));
-                }
+            @*@for(alert <- alerts) {
+            @if(alert.getAlertType().equals(models.Alert.AlertType.FREQUENCY)) {
+                L.marker([@alert.latitude, @alert.longitude], {icon: frequencyMarker}).addTo(map)
+                .bindPopup(alertTemplate('@alert.getAlertType', '@alert.getTimestamp', @alert.getDuration + ' s',
+                @alert.getAlertValue + 'Hz', @alert.latitude, @alert.longitude));
             }
+            @if(alert.getAlertType().equals(models.Alert.AlertType.VOLTAGE)) {
+                L.marker([@alert.latitude, @alert.longitude], {icon: voltageMarker}).addTo(map)
+                .bindPopup(alertTemplate('@alert.getAlertType', '@alert.getTimestamp', @alert.getDuration + ' s',
+                @alert.getAlertValue + ' V', @alert.latitude, @alert.longitude));
+            }
+            } *@
         </script>
 
     </div>
