--- a/app/views/publicpowerqualitymonitoring.scala.html
+++ b/app/views/publicpowerqualitymonitoring.scala.html
@@ -148,16 +148,16 @@
 
             // Display alerts
             @for(alert <- alerts) {
-            @if(alert.getAlertType().equals(models.Alert.AlertType.FREQUENCY)) {
-                L.marker([@alert.latitude, @alert.longitude], {icon: frequencyMarker}).addTo(map)
-                .bindPopup(alertTemplate('@alert.getAlertType', '@alert.getDate', @alert.getDuration + ' s',
-                @alert.getAlertValue + 'Hz', @alert.latitude, @alert.longitude));
-            }
-            @if(alert.getAlertType().equals(models.Alert.AlertType.VOLTAGE)) {
-                L.marker([@alert.latitude, @alert.longitude], {icon: voltageMarker}).addTo(map)
-                .bindPopup(alertTemplate('@alert.getAlertType', '@alert.getDate', @alert.getDuration + ' s',
-                @alert.getAlertValue + ' V', @alert.latitude, @alert.longitude));
-            }
+                @if(alert.getAlertType().equals(models.Alert.AlertType.FREQUENCY)) {
+                    L.marker([@alert.getDevice.getLatitude, @alert.getDevice.getLongitude], {icon: frequencyMarker}).addTo(map)
+                    .bindPopup(alertTemplate('@alert.getAlertType', '@alert.getTimestamp', @alert.getAlertDuration + ' ms',
+                    @alert.getAlertValue + 'Hz', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
+                }
+                @if(alert.getAlertType().equals(models.Alert.AlertType.VOLTAGE)) {
+                    L.marker([@alert.getDevice.getLatitude, @alert.getDevice.getLongitude], {icon: voltageMarker}).addTo(map)
+                    .bindPopup(alertTemplate('@alert.getAlertType', '@alert.getTimestamp', @alert.getAlertDuration + ' ms',
+                    @alert.getAlertValue + ' V', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
+                }
             }
         </script>
 
