--- a/app/views/admin/admincdsi.scala.html
+++ b/app/views/admin/admincdsi.scala.html
@@ -1,3 +1,22 @@
+@*
+    This file is part of opq-ao.
+
+    opa-ao is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    opa-ao is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with opq-ao.  If not, see <http://www.gnu.org/licenses/>.
+
+    Copyright 2013 Anthony Christe
+*@
+
 @admin("CDSI Administration",
     "This page also allows you to manage your participation in the <a href=\"#\">Community Data Sharing Initiative</a> .") {
     <div class="span6">
@@ -13,7 +32,7 @@
             <div>
                 <input type="checkbox" value="true" id="state_checkbox" name="checkbox">
                 <select>
-                    @for(state <- utils.FormUtils.listOfStates) {
+                    @for(state <- utils.FormUtils.LIST_OF_STATES) {
                         <option>@state</option>
                     }
                 </select>
